--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.9"                    # optional since v1.27.0
 services:
   my-app:
-    image: meeej/my-app:1.1       # syntax is dockerhubusername/imageName:tag
+    image: meeej/my-app:latest       # syntax is dockerhubusername/imageName:tag
     ports:
       - "3000:3000"               # Forward host port 3000 to container port 3000
     depends_on:                   # Specifies the order docker-compose starts the services 
